Fixed contrast issues with header2

--- a/style.css
+++ b/style.css
@@ -85,6 +85,9 @@
     margin-left:50px;
     margin-top:20px;
     margin-bottom:-40px;
+    font-size:35px;
+    font-family: Roboto;
+
     
 }
 
